Removes medium link and fixes social links alignment. Fixes date on first blog post.

--- a/src/components/layouts/ExpandedHeader.module.css
+++ b/src/components/layouts/ExpandedHeader.module.css
@@ -128,6 +128,10 @@
   vertical-align: top;
 }
 
+.social-item:last-child {
+  margin-right: 0;
+}
+
 .arrow-button-container {
   width: 100%;
   height: 40px;
